--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-tokio = { version = "1.6.1", features = ["macros"] }
-lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
+tokio = { version = "1.6.1", features = ["macros", "rt", "rt-multi-thread"] }
+lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git", branch = "master"}
 serde_json = "1.0"
