--- a/serverless.yml
+++ b/serverless.yml
@@ -10,14 +10,24 @@
 #    docs.serverless.com
 #
 # Happy Coding!
-service: docx_api
+service: docx-api
+useDotenv: true
+custom:
+  rust:
+    dockerTag: '1.51'
+    dockerImage: 'softprops/lambda-rust'
 provider:
   name: aws
   runtime: rust
   memorySize: 128
-# you can overwrite defaults here
-#  stage: dev
-#  region: us-east-1
+  stage: dev
+  region: ap-northeast-1
+  profile: yorinton_serverless
+  apiGateway:
+    minimumCompressionSize: 1024
+    shouldStartNameWithService: true
+  lambdaHashingVersion: 20201221
+
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
@@ -46,39 +56,18 @@ plugins:
   - serverless-rust
 
 functions:
-  hello:
+  create_docx:
     # handler value syntax is `{cargo-package-name}.{bin-name}`
     # or `{cargo-package-name}` for short when you are building a
     # default bin for a given package.
-    handler: hello
+    handler: docx_api
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
+    events:
+      - http:
+          path: docx/create
+          method: post
 
 #    Define function environment variables here
 #    environment:
