パッケージ名修正

--- a/package.json
+++ b/package.json
@@ -3,5 +3,5 @@
     "serverless": "^2.44.0",
     "serverless-rust": "git+https://github.com/softprops/serverless-rust.git#ebe43ceacfb7f770569e98e3dfb4bbb6eba0d88d"
   },
-  "name": "docx_api"
+  "name": "rust_api"
 }
